# Lab_2.25

./: .gitignore  README.md  pyproject.toml
program/: ind.py
